[gd_scene load_steps=4 format=3 uid="uid://pjl46hio81iw"]

[ext_resource type="Script" uid="uid://b8fk6t7hylrk5" path="res://src/components/event_history.gd" id="1_my0cf"]
[ext_resource type="FontFile" uid="uid://xxso74255fx8" path="res://assets/fonts/Kanit/Kanit-Bold.ttf" id="2_n3ept"]
[ext_resource type="FontFile" uid="uid://crnwg6pu4vlqj" path="res://assets/fonts/Kanit/Kanit-Regular.ttf" id="3_tkneg"]

[node name="EventHistory" type="Node"]
script = ExtResource("1_my0cf")

[node name="EventHistoryButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -141.0
offset_top = 13.0
offset_right = -16.0
offset_bottom = 44.0
grow_horizontal = 0
text = "Open Event History"

[node name="Panel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 193.0
offset_top = 62.0
offset_right = -193.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 2

[node name="EventHistoryList" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/EventHistoryList"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="DummyEvent" type="VBoxContainer" parent="Panel/EventHistoryList/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/EventHistoryList/VBoxContainer/DummyEvent"]
layout_mode = 2
text = "Event Text Here"
horizontal_alignment = 1

[node name="Description" type="Label" parent="Panel/EventHistoryList/VBoxContainer/DummyEvent"]
layout_mode = 2
text = "Event Description Here"
horizontal_alignment = 1

[node name="DummyEvent2" type="VBoxContainer" parent="Panel/EventHistoryList/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/EventHistoryList/VBoxContainer/DummyEvent2"]
layout_mode = 2
text = "Event Text Here"
horizontal_alignment = 1

[node name="Description" type="Label" parent="Panel/EventHistoryList/VBoxContainer/DummyEvent2"]
layout_mode = 2
text = "Event Description Here"
horizontal_alignment = 1

[node name="DummyEvent3" type="VBoxContainer" parent="Panel/EventHistoryList/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/EventHistoryList/VBoxContainer/DummyEvent3"]
layout_mode = 2
text = "Event Text Here"
horizontal_alignment = 1

[node name="Description" type="Label" parent="Panel/EventHistoryList/VBoxContainer/DummyEvent3"]
layout_mode = 2
text = "Event Description Here"
horizontal_alignment = 1

[node name="DummyEvent" type="VBoxContainer" parent="."]
visible = false
offset_left = 193.0
offset_top = 62.0
offset_right = 371.0
offset_bottom = 112.0

[node name="Name" type="Label" parent="DummyEvent"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n3ept")
text = "Event Text Here"
horizontal_alignment = 1

[node name="Description" type="Label" parent="DummyEvent"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tkneg")
text = "Event Description Here"
horizontal_alignment = 1

[connection signal="pressed" from="EventHistoryButton" to="." method="_on_event_history_button_pressed"]
